--- a/index.html
+++ b/index.html
@@ -38,31 +38,132 @@
         </div>
     </section>
     <!-- Featured Products Section -->
-     <section class="mt-[142px] max-w-[1250px] mx-auto">
+    <section class="mt-[142px] max-w-[1250px] mx-auto">
         <h1 class="manrope-font text-[45px] font-extrabold text-[#1C1C1C] text-center">Our Featured Products</h1>
-        <p class="manrope-font text-[16px] font-medium text-[#777777] text-center w-[901px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-        <div class="cards flex flex-row items-center justify-between gap-6 mt-[50px]">
+        <p class="manrope-font text-[16px] font-medium text-[#777777] text-center md:w-[901px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <div class="cards grid grid-cols-1 md:grid-cols-4 place-items-center gap-4 min-h-[200px] mt-[50px]">
             <div class="card1 flex flex-col items-center rounded-[10px] bg-gradient-to-b from-[#F4F4F4]/100 to-[#F4F4F4]/0 w-[267px] h-[391px] pt-[30px] pb-[42px]">
-                <img src="./images/tea-1.png" alt="tea-1" class="w-[135px] h-[212px]">
+                <img src="./images/tea-1.png" alt="tea-1" class="w-[135px] h-[212px] mx-auto">
                 <p class="manrope-font text-[#1C1C1C] text-[25px] font-extrabold text-center mt-[30px]">Green Tea</p>
                 <p class="manrope-font text-[#777777] text-[16px] font-semibold text-center">Creamer could be replaced by fresh milk</p>
             </div>
-            <div class="card2 flex flex-col items-center rounded-[10px] bg-gradient-to-b from-[#F4F4F4]/100 to-[#F4F4F4]/0 w-[267px] h-[391px] pt-[30px] pb-[42px]">
-                <img src="./images/tea-2.png" alt="tea-1" class="w-[135px] h-[212px]">
+            <div class="card2 grid grid-cols-1 rounded-[10px] bg-gradient-to-b from-[#F4F4F4]/100 to-[#F4F4F4]/0 w-[267px] h-[391px] pt-[30px] pb-[42px]">
+                <img src="./images/tea-2.png" alt="tea-1" class="w-[135px] h-[212px] mx-auto">
                 <p class="manrope-font text-[#1C1C1C] text-[25px] font-extrabold text-center mt-[30px]">Milk Tea</p>
                 <p class="manrope-font text-[#777777] text-[16px] font-semibold text-center">Creamer could be replaced by fresh milk</p>
             </div>
             <div class="card3 flex flex-col items-center rounded-[10px] bg-gradient-to-b from-[#F4F4F4]/100 to-[#F4F4F4]/0 w-[267px] h-[391px] pt-[30px] pb-[42px]">
-                <img src="./images/tea-3.png" alt="tea-1" class="w-[135px] h-[212px]">
+                <img src="./images/tea-3.png" alt="tea-1" class="w-[135px] h-[212px] mx-auto">
                 <p class="manrope-font text-[#1C1C1C] text-[25px] font-extrabold text-center mt-[30px]">Boba Tea</p>
                 <p class="manrope-font text-[#777777] text-[16px] font-semibold text-center">Creamer could be replaced by fresh milk</p>
             </div>
             <div class="card4 flex flex-col items-center rounded-[10px] bg-gradient-to-b from-[#F4F4F4]/100 to-[#F4F4F4]/0 w-[267px] h-[391px] pt-[30px] pb-[42px]">
-                <img src="./images/tea-4.png" alt="tea-1" class="w-[135px] h-[212px]">
+                <img src="./images/tea-4.png" alt="tea-1" class="w-[135px] h-[212px] mx-auto">
                 <p class="manrope-font text-[#1C1C1C] text-[25px] font-extrabold text-center mt-[30px]">Black Tea</p>
                 <p class="manrope-font text-[#777777] text-[16px] font-semibold text-center">Creamer could be replaced by fresh milk</p>
             </div>
         </div>
-     </section>
+    </section>
+    <!-- Great Tea Section -->
+    <section class="flex flex-col md:flex-row justify-between gap-[52px] items-center max-w-[1250px] mx-auto mt-[130px]">
+        <div class="left-side grid grid-cols-2 grid-rows-3 h-full md:w-1/2 p-5 gap-[30px] ">
+            <div class="bg-gradient-to-r from-[#FF0000] to-[#FF8938] opacity-10 rounded-[10px] h-auto"></div>
+            <div class="bg-[#E6A623]/10 row-span-2 rounded-[10px] flex items-center justify-center h-[355.28px]">
+                <img src="./images/fresh-1.png" alt="fresh-1">
+            </div>
+            <div class="bg-[#577639]/10 row-span-2 rounded-[10px] flex items-center justify-center h-[355.28px]">
+                <img src="./images/fresh-2.png" alt="fresh-2">
+            </div>
+            <div class="bg-gradient-to-r from-[#D9D9D9] to-[#FFFFFF]/0 rounded-[10px] h-auto"></div>
+        </div>
+        <div class="right-side h-full md:w-1/2">
+            <h1 class="manrope-font text-[#1C1C1C] text-[45px] font-extrabold">
+                Great Tea, Freshly Presented
+            </h1>
+            <p class="manrope-font text-[#777777] text-[16px] font-medium mt-[53px]">
+                The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+            </p>
+            <p class="manrope-font text-[#1C1C1C] text-[20px] font-extrabold mt-[30px]">
+                Unique Taste
+            </p>
+            <p class="manrope-font text-[#777777] text-[16px] font-medium mt-[18px]">
+                A Unique and different style from other teapots gives a luxurious and minimalist impression
+            </p>
+            <p class="manrope-font text-[#1C1C1C] text-[20px] font-extrabold mt-[20px]">
+                Premium Quality
+            </p>
+            <p class="manrope-font text-[#777777] text-[16px] font-medium mt-[18px]">
+               Premium Quality that makes tea more elegant and more durable when you use it. 
+            </p>
+
+        </div>
+    </section>
+    <!-- Reviews Section -->
+    <section class="bg-gradient-to-l from-[#FF0000] to-[#FF8938] rounded-[10px] max-w-[1250px] h-[650px] grid grid-cols-1 items-center gap-[36px] md:grid-cols-2 mx-auto px-7 md:px-16 mt-[130px]">
+        <div class="left-div relative">
+            <div>
+                <p class="manrope-font text-[45px] font-extrabold text-[#F4F4F4]">
+                    Meet Our Super<br>Clients
+                </p>
+                <p class="manrope-font text-[16px] font-medium text-[#F4F4F4] mt-[53px]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+                </p>
+                <button type="submit" class=" bg-white px-7 py-4 rounded-[8px] mt-[30px]">
+                    <span class="text-transparent bg-clip-text bg-gradient-to-l from-[#FF0000] to-[#FF8938] manrope-font text-[20px] font-bold">
+                        Show All
+                    </span>
+                </button>
+            </div>
+            <img src="./images/bg_cup.png" alt="" class="absolute left-[170px] -bottom-45">
+        </div>
+        <div class="right-div relative">
+            <!-- Middle Card -->
+            <div class="customer-review-1 bg-white pl-[50px] pr-[42px] pt-[42px] pb-[32px] absolute z-10 -top-30 left-5 w-[70%] h-56 rounded-[8px]">
+                <div class="absolute top-[-25px] left-[-25px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="client">
+                </div>
+                <p class="manrope-font text-[#777777] text-[16px]">
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                </p>
+                <p class="manrope-font text-[#1C1C1C] text-[16px] font-bold mt-5">
+                    Ilham Yuda
+                </p>
+                <p class="manrope-font text-[#5D5A6F] text-[16px] font-medium">
+                    Businessman
+                </p>
+                <img src="./images/circles.png" alt="" class="absolute bottom-4 right-4">
+            </div>
+            <!-- Top right card -->
+            <div class="customer-review-2 bg-white pl-[50px] pr-[42px] pt-[42px] pb-[32px] absolute z-0 -top-60 right-5 w-[70%] h-56 rounded-[8px] opacity-30">
+                <div class="absolute top-[-25px] left-[-25px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="client">
+                </div>
+                <p class="manrope-font text-[#777777] text-[16px]">
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                </p>
+                <p class="manrope-font text-[#1C1C1C] text-[16px] font-bold mt-5">
+                    Ilham Yuda
+                </p>
+                <p class="manrope-font text-[#5D5A6F] text-[16px] font-medium">
+                    Businessman
+                </p>
+            </div>
+            <!-- Bottom right card -->
+            <div class="customer-review-3 bg-white pl-[50px] pr-[42px] pt-[42px] pb-[32px] absolute -bottom-60 z-0 right-5 w-[70%] h-56 rounded-[8px] opacity-30">
+                <div class="absolute top-[-25px] left-[-25px] rounded-full p-1 bg-white">
+                    <img src="./images/client.png" alt="client">
+                </div>
+                <p class="manrope-font text-[#777777] text-[16px]">
+                    We are providing the best and suitable home insurance services for the people who are interested to treatment
+                </p>
+                <p class="manrope-font text-[#1C1C1C] text-[16px] font-bold mt-5">
+                    Ilham Yuda
+                </p>
+                <p class="manrope-font text-[#5D5A6F] text-[16px] font-medium">
+                    Businessman
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
