--- a/index.html
+++ b/index.html
@@ -165,5 +165,160 @@
             </div>
         </div>
     </section>
+    <!-- News & Events Section -->
+    <section class="max-w-[1250px] mx-auto mt-[130px]">
+        <div class="text">
+            <h1 class="manrope-font text-[45px] font-extrabold text-[#1C1C1C] text-center">
+                News & Events
+            </h1>
+            <p class="manrope-font text-[16px] font-medium text-[#777777] text-center md:w-[901px] mx-auto mt-[30px]">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. 
+            </p>
+        </div>
+        <div class="flex flex-row items-center justify-between gap-[24px] mt-[50px] mb-[130px] ">
+            <div class="border-1  border-[#D2D2D2] rounded-[10px] w-[364px] h-[448px] p-[20px]">
+                <img src="./images/news-1.png" alt="news-1">
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[20px]">
+                    Feb 05, 2027
+                </p>
+                <p class="manrope-font text-[20px] font-extrabold text-[#1C1C1C] mt-[10px]">
+                    Collecting 8 points for discount
+                </p>
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[25px]">
+                    There are many variations of passages of Lorem Ipsum available.
+                </p>
+                <button class="manrope-font text-[16px] font-bold text-[#1C1C1C] mt-[20px]">
+                    Learn More
+                </button>
+            </div>
+            <div class="border-1  border-[#D2D2D2] rounded-[10px] w-[364px] h-[448px] p-[20px]">
+                <img src="./images/news-2.png" alt="news-2">
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[20px]">
+                    Feb 05, 2027
+                </p>
+                <p class="manrope-font text-[20px] font-extrabold text-[#1C1C1C] mt-[10px]">
+                    Collecting 8 points for discount
+                </p>
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[25px]">
+                    There are many variations of passages of Lorem Ipsum available.
+                </p>
+                <button class="manrope-font text-[16px] font-bold text-[#1C1C1C] mt-[20px]">
+                    Learn More
+                </button>
+            </div>
+            <div class="border-1  border-[#D2D2D2] rounded-[10px] w-[364px] h-[448px] p-[20px]">
+                <img src="./images/news-3.png" alt="news-3">
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[20px]">
+                    Feb 05, 2027
+                </p>
+                <p class="manrope-font text-[20px] font-extrabold text-[#1C1C1C] mt-[10px]">
+                    Collecting 8 points for discount
+                </p>
+                <p class="manrope-font text-[16px] font-medium text-[#777777] mt-[25px]">
+                    There are many variations of passages of Lorem Ipsum available.
+                </p>
+                <button class="manrope-font text-[16px] font-bold text-[#1C1C1C] mt-[20px]">
+                    Learn More
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- Footer Section -->
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16 ">
+      <div class="w-9/12 mx-auto max-w-[1250px]">
+        <!-- Logo -->
+        <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="./images/cup.png" alt="" />
+          <div class="flex items-center gap-2">
+            <h4>Ready to get started?</h4>
+            <button
+              class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+        <!-- Links -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+          <!-- first column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">About</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- second column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Our Services</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">About</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+              </li>
+            </ul>
+          </div>
+          <!-- third column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">Help</h3>
+            <ul class="space-y-2">
+              <li>
+                <a class="hover:text-orange-600" href="#">Home</a>
+              </li>
+              <li>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
+              </li>
+            </ul>
+          </div>
+
+          <!-- fourth column -->
+          <div>
+            <h3 class="font-semibold text-lg mb-3">
+              Subscribe to our newsletter
+            </h3>
+            <div class="flex flex-col space-y-2">
+              <div>
+                <input
+                  placeholder="Email Address"
+                  type="text"
+                  class="bg-transparent border-b-2 border-black w-4/6"
+                />
+                <i
+                  class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"
+                ></i>
+                <div class="flex justify-between w-2/5 mb-2 mt-8">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-square-instagram"></i>
+                  <i class="fa-brands fa-square-twitter"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="text-center pt-4 mt-4">
+          <p class="text-sm text-gray-600">
+            © 2027 UIDesign.to - All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
