--- a/index.html
+++ b/index.html
@@ -224,16 +224,14 @@
         </div>
     </section>
     <!-- Footer Section -->
-    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16 ">
-      <div class="w-9/12 mx-auto max-w-[1250px]">
+    <footer class="bg-gradient-to-l from-[#FF0000]/10 to-[#FF8938]/10 text-gray-700 py-10 px-4 md:px-16 ">
+      <div class="w-9/12 mx-auto max-w-[1250px] my-[130px]">
         <!-- Logo -->
         <div class="mb-8 flex justify-between">
           <img class="mb-8" src="./images/cup.png" alt="" />
           <div class="flex items-center gap-2">
             <h4>Ready to get started?</h4>
-            <button
-              class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold"
-            >
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold cursor-pointer">
               Get Started
             </button>
           </div>
@@ -248,10 +246,10 @@
                 <a class="hover:text-orange-600" href="#">Home</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Insurance</a>
+                <a class="hover:text-orange-600" href="#">About Us</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">About</a>
+                <a class="hover:text-orange-600" href="#">Insurance</a>
               </li>
               <li>
                 <a class="hover:text-orange-600" href="#">Privacy Policy</a>
@@ -263,16 +261,16 @@
             <h3 class="font-semibold text-lg mb-3">Our Services</h3>
             <ul class="space-y-2">
               <li>
-                <a class="hover:text-orange-600" href="#">Insurance</a>
+                <a class="hover:text-orange-600" href="#">Life Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">About</a>
+                <a class="hover:text-orange-600" href="#">Car Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+                <a class="hover:text-orange-600" href="#">Health Insurance</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Privacy Policy</a>
+                <a class="hover:text-orange-600" href="#">House Insurance</a>
               </li>
             </ul>
           </div>
@@ -281,10 +279,10 @@
             <h3 class="font-semibold text-lg mb-3">Help</h3>
             <ul class="space-y-2">
               <li>
-                <a class="hover:text-orange-600" href="#">Home</a>
+                <a class="hover:text-orange-600" href="#">FAQs</a>
               </li>
               <li>
-                <a class="hover:text-orange-600" href="#">Insurance</a>
+                <a class="hover:text-orange-600" href="#">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -301,9 +299,9 @@
                   type="text"
                   class="bg-transparent border-b-2 border-black w-4/6"
                 />
-                <i
-                  class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 inline-flex rounded-full text-white justify-center items-center"
-                ></i>
+                <button class="w-8 h-8 bg-orange-600 inline-flex rounded-full text-white justify-center items-center cursor-pointer">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </button>
                 <div class="flex justify-between w-2/5 mb-2 mt-8">
                   <i class="fa-brands fa-facebook"></i>
                   <i class="fa-brands fa-square-instagram"></i>
